# pyspark-fraud-analysis

./: .gitignore  .gitmodules  Escopo do Projeto copy.md  Escopo do Projeto.md  INSTALL.md  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
src/fraud_analysis/business/: fraud_analyzer.py
src/fraud_analysis/config/: app_config.py
src/fraud_analysis/io/: data_reader.py  data_writer.py
src/fraud_analysis/pipeline/: fraud_pipeline.py
src/fraud_analysis/schemas/: data_schemas.py
src/fraud_analysis/spark_session/: session_manager.py
tests/: test_fraud_analyzer.py  test_simple_validation.py
