[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-fraud-analysis"
version = "1.0.0"
description = "Análise de fraude em pagamentos usando PySpark"
authors = [
    {name = "Henrique Luiz", email = "henrique@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pyspark>=3.4.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest-mock"
]

[project.scripts]
fraud-analysis = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
